--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 }
 
 .nav-links a{
-    color:rgb(224, 162, 5);
+    color:rgb(213, 170, 5);
     font-family: "Kelly Slab", sans-serif;
     font-weight: 500;
     font-size: large;
@@ -35,7 +35,7 @@ body{
 }
 
 .nav-links a:hover{
-    background:rgb(248, 195, 230);
+    background:rgb(249, 238, 193);
     border-radius: 3px;
     color:black;
     padding:2px;
@@ -62,7 +62,7 @@ body{
 .phone-icon {
       font-family: 'Material Symbols Outlined';
       font-size: 25px;
-      color: #32fe13; 
+      color: #d5aa05; 
       vertical-align: middle;
  }
  .contact-text {
@@ -100,14 +100,14 @@ body{
     padding-top:8%;
     color:whitesmoke;
     text-align: center;
-    font-family:"Merriweather", serif;
+    font-family:"Cormorant Upright", serif;
     font-weight: 300;
     /* font-style: italic; */
  }
 
 .ketki
 {
-   width:33.3%;
+   width:40%;
    height: 90%;
    flex:1;
    background-image: url("image/D1.png");
@@ -116,12 +116,13 @@ body{
 }
 /*                          HOME PAGE TEXTS */
  .invite-BA{
-    font-size: 1.3rem;
+    font-size: 1.4rem;
  }
  .invite-name{
     color:rgb(224, 162, 5);
     font-weight: 800;
     font-size: 1.8rem;
+    padding:4%;
   }
  .invite-date{
      font-size: 1.2rem;
@@ -132,13 +133,14 @@ body{
 .about-container{
     margin: 3% 5%;
     padding:2%;
-    font-family: "Roboto Slab", serif;
-    font-size: 1rem;
-    border:2px dotted;
+    font-family: "Cormorant Upright", serif;
+    font-size: 1.2rem;
+    color: rgb(249, 238, 193);
+    border:2px dotted rgb(249, 238, 193);
 }
 
 .about-container h4{
-    color:rgb(193, 235, 41);
+    color:rgb(213, 170, 5);
 }
 
              /* --------------PROGRAM PAGE---------------- */
@@ -147,42 +149,51 @@ body{
     margin:2% 2%;
     padding:2% 4%;
     /* border: 4px dotted rgb(9, 48, 85); */
-    border: 2px dotted rgb(226, 229, 232);
+    border: 2px dotted rgb(249, 238, 193);
     border-radius: 5px;
-    background-image: linear-gradient(to right, rgb(48, 49, 47) , rgb(237, 246, 237),rgb(77, 79, 77));
-    color:rgb(100, 2, 18);
-    line-height: 1.6rem;
+    background-color: black;
+    color:#f9eec1;
+    line-height: 1.7rem;
     font-family: "Cormorant Upright", serif;
     font-weight: 900;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 
 .dance_container{
-    margin:5%;
+    margin:2%;
     display: flex;
     /* align-items: flex-start; */
     gap:5%;
 } 
 
-.program-container h3{
-    color:rgb(228, 110, 14);
+.program-container h3,h4{
+    color:rgb(213, 170, 5);
     text-align: center;
     font-weight: 800;
+    font-size: 2.0rem;
 }
 .program-time{
-    color:rgb(238, 232, 212)
+    color:rgb(213, 170, 5);
+    font-size: 1.5rem;
 }
 
 .dance_img{
-    height:500px;
-    width:300px;
+    height:400px;
+    width:240px;
     object-fit: cover;
     display: block;
-    border:1px solid white;
+    border:1px solid rgb(249, 238, 193); 
 }
 .dance_details{
     margin-top: 10%;
+ }
+
+ .dance_details h2{
+    color:rgb(213, 170, 5);
+ }
+.dance_details p{
+    color:rgb(249, 238, 193);
  }
 
                  /* --------------MUSICIAN PAGE---------------- */
@@ -195,23 +206,36 @@ body{
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    gap:20px;   
+    gap:25px;   
 }          
 
-.musician-container img{
-    width:20%;
+/* .musician-container img{ */
+.musician-img{
+    width: 400px;
     max-width: 100%;
     height:300px;
-    border:1px dashed rgb(237, 160, 7);
+    border:1px solid rgb(213, 170, 5);
     overflow: hidden;
+}
+.musician-guru-img{
+    width: 400px;
+    max-width: 100%;
+    height: 500px;
+    border:1px solid rgb(213, 170, 5);
+    object-fit: cover;
+    overflow: hidden; 
 }
 .musician-container p{
     padding: 2%;
     flex:1;
     font-size: 1.2rem;
     line-height: 1.6;
-    font-family: "Roboto Slab", serif;
+    font-family: "Cormorant Upright", serif;
+    color: #f9eec1;
 }     
+.musician_type{
+color: rgb(213, 170, 5);
+}
 
              /* --------------GALLERY PAGE---------------- */
 
@@ -221,21 +245,23 @@ body{
 
 
 @media (max-width: 768px) {
-  .nataraj,.invite,.ketki {
+   .nataraj,.invite{
     min-width: 100%;
-    height: 33.33vh;
+    height: 25vh;
     z-index: 1;
-  }
+    padding:4%;
+   }
   .nataraj,.ketki{
     background-size: contain;
     background-position: top center;
     background-repeat: no-repeat;
   }
-  .invite{
-    padding-top: 2%;
+  .ketki{
+    height:70vh;
+    width:100%;
+    z-index: 1;
   }
   .invite-BA,.invite-name,.invite-date{
-    padding:1%;
     font-size:1rem;;
   }
 
@@ -243,7 +269,8 @@ body{
     font-size: 1rem;
   }
 
-   .musician-container img,.musician-container p{
+
+   .musician-img,.musician-container p{
     min-width: 80%;
     height: auto;
     font-size: 1rem;
@@ -251,15 +278,25 @@ body{
     display: block;
     justify-content: space-around;
   }
-    
+  .musician-guru-img{
+    height: 400px;
+  }
+.program-container{
+    font-size: 1.1rem;
+}
+.program-container h3, h4,h2,.musician-container h5{
+    font-size: 1.5rem;
+}
 .dance_container{
     display: block;
     justify-content: space-around;
+    font-size: 1.2rem;
 }
   .dance_img{
     min-width: 100%;
     /* height: auto; */
     height:50%;
+    margin-top:8%;
   }
 .nav-links{
         display: none;
@@ -280,7 +317,7 @@ body{
     }
 
 .nav-links a:hover{
-        background-color: cadetblue;
+        background:rgb(249, 238, 193);
     }
 
 .nav-links.show{
