--- a/style.css
+++ b/style.css
@@ -248,7 +248,44 @@ color: rgb(213, 170, 5);
     /* font-size: 2.0rem; */
 }
              /* --------------GALLERY PAGE---------------- */
+.slideshow-container {
+  /* position: relative; */
+  width: 900px;
+  max-width: 90%;
+  text-align: center;
+  /* display:flex;
+  width: 100%;
+  height: 100vh;
+  flex-wrap: wrap;
+  align-items: center; */
+}
 
+#slideshow-image {
+  width: 40%;
+  height: 450px;
+  border: 3px solid #fff;
+  margin-left: 50%;
+}
+
+.controls {
+  /* margin-top: 10px; */
+  margin-left: 50%;
+}
+
+button {
+  background-color: #444;
+  color: #fff;
+  border: none;
+  padding: 10px 15px;
+  margin: 0 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button:hover {
+  background-color: #666;
+}
+/* 
 .slideshow {
     margin-left: 25%;
     margin-top: 2%;
@@ -268,7 +305,6 @@ color: rgb(213, 170, 5);
       height: 100%;
       opacity: 0;
       animation: fade 9s infinite;
-      /* object-fit: cover; */
       object-fit: contain;
     }
 
@@ -276,23 +312,13 @@ color: rgb(213, 170, 5);
 .slide:nth-child(2) { animation-delay: 3s; }
 .slide:nth-child(3) { animation-delay: 6s; }
 
-/* .slide:nth-child(2) { animation-delay: 10s; }
-.slide:nth-child(3) { animation-delay: 20s; } */
-/* .slide:nth-child(4) { animation-delay: 30s; }
-.slide:nth-child(5) { animation-delay: 40s; }
-.slide:nth-child(6) { animation-delay: 50s; } */
-/* .slide:nth-child(7) { animation-delay: 30s; }
-.slide:nth-child(8) { animation-delay: 35s; }
-.slide:nth-child(9) { animation-delay: 40s; }
-.slide:nth-child(10) { animation-delay: 45s; } */
-
-    @keyframes fade {
+@keyframes fade {
       0% { opacity: 0; }
       10% { opacity: 1; }
       30% { opacity: 1; }
       40% { opacity: 0; }
       100% { opacity: 0; }
-    }
+} */
 
              /* --------------RESPONSIVE---------------- */
 
@@ -366,14 +392,30 @@ color: rgb(213, 170, 5);
     height:50%;
     margin-top:8%;
   }
-
-.slideshow{
-     min-width: 50%;
-     width:60%;
-    height:60%;
+.slideshow-container {
     align-items: center;
-    margin-top:8%;
 }
+
+#slideshow-image {
+    min-width: 100%;
+    max-width: 100%;
+    height:auto;
+    margin-left: 2%;
+    margin-top: 2%;
+}
+.controls {
+  /* margin-top: 10px; */
+  margin-left: 0%;
+  display: flex;
+}
+/* .slideshow{
+     min-width: 50%;
+     width:80%;
+    height:60%;
+    /* align-items: center; */
+    /* margin-top:8%; */
+    /* margin-left: 6%; */
+/* } */ 
 .nav-links{
         display: none;
         flex-direction: column;
